# YOLO-PCB

./: .gitignore  config.json  readme-tw.md  test_camera.py
YOLO-PCB-GUI/: ISSUE_RESOLVED.md  RASPBERRY_PI_INSTALL.md  README.md  config.json  demo.py  final_verification.py  pyproject.toml  requirements_py311.txt  requirements_py311_minimal.txt  test_and_run.py  test_camera.py  test_camera_detection.py  test_complete.py  test_layout.py  test_modules.py  test_simple_loader.py  test_yolo_loader.py  test_yolo_loading.py  verify_gui.py
YOLO-PCB-GUI/core/: detector.py
YOLO-PCB-GUI/gui/: detect_tab.py  main_window.py
YOLO-PCB-GUI/gui/widgets/: image_viewer.py
YOLO-PCB-GUI/yolo_gui_utils/: simple_yolo_loader_v2.py
docs/: GUI-架構評估.md  detect-説明.md  test-説明.md  train-説明.md  開發步驟指南.md
