[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-pcb-gui"
version = "1.0.0"
description = "YOLO-PCB GUI 應用程式 - 適用於樹莓派的 PCB 缺陷檢測工具"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "YOLO-PCB Team"},
]
maintainers = [
    {name = "YOLO-PCB Team"},
]
keywords = ["yolo", "pcb", "detection", "gui", "raspberry-pi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"

# 核心依賴 - 樹莓派優化版本
dependencies = [
    # GUI框架 (樹莓派輕量化版本)
    "PyQt5>=5.15.7",
    
    # 深度學習 (ARM64 相容版本)
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    
    # 影片處理 (樹莓派優化)
    "opencv-python-headless>=4.8.0",  # headless版本節省記憶體
    "Pillow>=10.0.0",
    
    # 數值計算 (ARM 優化)
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    
    # 配置檔案
    "PyYAML>=6.0.1",
    
    # 工具
    "tqdm>=4.65.0",
    "scipy>=1.11.0",
    
    # YOLO
    "ultralytics>=8.0.0",
    
    # 系統監控
    "psutil>=5.9.0",
    
    # 樹莓派專用工具
    "RPi.GPIO>=0.7.1; platform_machine=='armv7l' or platform_machine=='aarch64'",
    "gpiozero>=1.6.2; platform_machine=='armv7l' or platform_machine=='aarch64'",
]

# 可選依賴組
[project.optional-dependencies]
# 開發工具
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.3.0",
    "black>=23.0.0",
    "pylint>=2.17.0",
    "mypy>=1.5.0",
]

# 完整功能（高階樹莓派使用）
full = [
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "scikit-learn>=1.3.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

# 最小安裝（低階樹莓派使用）
minimal = [
    "PyQt5>=5.15.7",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "ultralytics>=8.0.0",
    "PyYAML>=6.0.1",
]

# 樹莓派相機支援
camera = [
    "picamera2>=0.3.0; platform_machine=='armv7l' or platform_machine=='aarch64'",
    "libcamera>=0.0.1; platform_machine=='armv7l' or platform_machine=='aarch64'",
]

[project.urls]
Homepage = "https://github.com/your-username/yolo-pcb"
Repository = "https://github.com/your-username/yolo-pcb.git"
Documentation = "https://github.com/your-username/yolo-pcb/docs"
"Bug Tracker" = "https://github.com/your-username/yolo-pcb/issues"

[project.scripts]
yolo-pcb-gui = "main:main"

# 樹莓派特定配置
[tool.setuptools]
package-dir = {"" = "."}
packages = ["gui", "core", "utils", "yolo_gui_utils"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.pt", "*.onnx"]

# 程式碼品質工具配置
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# 測試配置
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# 樹莓派專用安裝配置
[tool.pip]
# 針對 ARM 架構優化
prefer-binary = true
# 使用樹莓派官方 PyPI 鏡像（如果可用）
index-url = "https://pypi.org/simple"
extra-index-url = "https://www.piwheels.org/simple"
